# opengl-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  main.cpp
src/.cache/clangd/index/: Application.cpp.2CDE559EB9ECE7BE.idx  Application.cpp.FC1F18F20FFA215A.idx  Application.hpp.5715D54FA5390953.idx  Application.hpp.BD13B82023A3C21E.idx  Event.cpp.8BC1F5CBB139324C.idx  Event.cpp.9D84A592179ABA3F.idx  Event.hpp.B4F8B117352945B8.idx  Event.hpp.BD4C3A62EB638602.idx  (+465 more)
src/Shaders/: lightVertex.glsl  shaderSingleColor.glsl
src/Shaders/animated/: fragment.glsl  vertex.glsl
src/Shaders/circle/: fragment.glsl  vertex.glsl
src/Shaders/framebuffer/: fragment.glsl  vertex.glsl
src/Shaders/geomat/: fragment.glsl  geometry.glsl  vertex.glsl
src/Shaders/global/: blue.glsl  green.glsl  red.glsl  vertex.glsl  yellow.glsl
src/Shaders/procedural/: fragment.glsl  vertex.glsl
src/Shaders/real/: fragment.glsl  geometry.glsl  realfragment.glsl  realvertex.glsl  vertex.glsl
src/Shaders/simple/: fragment.frag  fragment.glsl  vertex.glsl  vertex.vert
src/Shaders/skybox/: fragment.glsl  vertex.glsl
src/glad/: CMakeLists.txt
src/glad/src/: glad.c
src/glm/detail/: type_half.inl
src/include/: Application.hpp  Event.hpp  ImGuiRenderer.hpp  Node.hpp  drawable.hpp  fgl.hpp  gl.hpp  glstd.hpp  lights.hpp  mesh.hpp  model.hpp  renderer.hpp  sdl.hpp  things.hpp  traits.hpp
src/libs/: Application.cpp  Event.cpp  ImGuiRenderer.cpp  Node.cpp  drawable.cpp  fgl.cpp  gl.cpp  glstd.cpp  lights.cpp  mesh.cpp  model.cpp  renderer.cpp  sdl.cpp  things.cpp  traits.cpp  utility.cpp
(+1 files in other folders)
